# Speech

./: .gitignore  CMakeLists.txt  Changelog  Doxyfile.in  README.md  VERSION
bindings/python/: CMakeLists.txt  README.md  build.sh  setup.py
bindings/python/ispeech/: __init__.py  _common.cpp  common.py  source.cpp  source.py  transform.cpp  transform.py
src/algorithms/karaoke/: karaoke.cc  karaoke.h  lyrics.h  midi.cpp  midi.h  midi_make.cc  midi_make.h  midi_parser.cc  midi_parser.h
src/ispeech/: CgTypes.h  def.cc  def.h  filter.h  functions.h  global.h  ispeech.h  model.h  source.h  transform.h
src/ispeech/filter/: MelFilter.cpp  MelFilter.h  MelFilterBank.cpp  MelFilterBank.h
src/ispeech/functions/: bh_92_1001_table.h  dtw.h  gen_spec_sines.cc  gen_spec_sines.h
src/ispeech/model/: ModelDFT.cc  ModelDFT.h  ModelHarmonic.cc  ModelHarmonic.h  ModelSTFT.cc  ModelSTFT.h  ModelSine.cc  ModelSine.h
src/ispeech/source/: Frame.cpp  Frame.h  FramesCollection.cpp  FramesCollection.h  PlainTextFile.cpp  PlainTextFile.h  RawPcmFile.h  SignalSource.cpp  SignalSource.h  WaveFile.cpp  WaveFile.h  WaveFileHandler.cpp  WaveFileHandler.h
src/ispeech/source/generator/: Generator.cpp  Generator.h  PinkNoiseGenerator.cpp  PinkNoiseGenerator.h  SineGenerator.cpp  SineGenerator.h  SquareGenerator.cpp  SquareGenerator.h  TriangleGenerator.cpp  TriangleGenerator.h  WhiteNoiseGenerator.cpp  WhiteNoiseGenerator.h  generator
src/ispeech/source/window/: BarlettWindow.cpp  BarlettWindow.h  BlackmanWindow.cpp  BlackmanWindow.h  BlackmanharrisWindow.cpp  BlackmanharrisWindow.h  FlattopWindow.cpp  FlattopWindow.h  GaussianWindow.cpp  GaussianWindow.h  HammingWindow.cpp  HammingWindow.h  HannWindow.cpp  HannWindow.h  RectangularWindow.h  TriangWindow.cpp  TriangWindow.h
src/ispeech/transform/: AquilaFft.cpp  AquilaFft.h  Dct.cpp  Dct.h  Dft.cpp  Dft.h  Difference.cpp  Difference.h  Fft.h  FftFactory.cpp  FftFactory.h  Mfcc.cpp  Mfcc.h  OouraFft.cpp  OouraFft.h  PitchDetection.cpp  PitchDetection.h  Spectrogram.cpp  Spectrogram.h
src/ispeech/utils/: Condition.h  log.cc  log.h
src/python/: ModelSine.py  hidden_markov_model.py  sine_model_backup.py  speech_fft.py  speech_model_dft.py  speech_model_harmonic.py  speech_model_sine.py  speech_model_stft.py  speech_model_stochastic.py  speech_source.py  speech_visual_crepe.py  test_energy_rms_loudness.py  test_fft.py  test_karaoke.py  test_karaoke_sine_model.py  test_speech_model_dft.py  test_speech_model_sine.py  test_speech_model_sine_dev.py  test_speech_model_sine_python.py  test_speech_model_sine_synthesis.py  test_speech_model_stft.py
tests/: CMakeLists.txt
tests/algorithms/karaoke/: test_lyrics.cc  test_midi.cc  test_midi_make.cc  test_midi_parser.cc
tests/ispeech/: CMakeLists.txt  test_functions.cc  test_global.cc
tests/ispeech/app/: test_score.cc  test_song_pitchdetection.cc
tests/ispeech/function/: test_dtw.cc  test_lpc.cc
tests/ispeech/model/: test_ModelDFT.cc  test_ModelHarmonic.cc
tests/ispeech/source/: test_Frame.cc  test_SignalSource.cc  test_WaveFile.cc
tests/ispeech/source/generator/: test_generator.cc
tests/ispeech/source/window/: test_window.cc
tests/ispeech/transform/: test_pitchdetection.cc  test_spectrogram.cc
tests/ispeech/utils/: CMakeLists.txt  test_log.cc
tests/python/: py_call_class.cc  py_call_class.py  py_callc_lass.cc  test_animation.py  test_python.py  test_read_csv.py
tests/python/app/: test_fft_filtering.py  test_score.py
tests/python/functions/: test_peakDetection.py
tests/python/karaoke/: test_karaoke.py  test_midi_parser.py
tests/python/lrc/: axi.lrc  test_read_lrc.py
tests/python/medleydb/: t.py  test.py  test_filter_acoustic_guitar.py  test_male_and_famale_singer.py  test_mix.py
tests/python/model/: test_ModelDFT.py  test_ModelDFT_analysis.py  test_ModelDFT_synthesis.py  test_ModelHarmonic_Analysis.py  test_ModelHarmonic_Analysis_python.py  test_ModelHarmonic_f0Detection.py  test_ModelHarmonic_f0Detection_python.py  test_ModelHarmonic_f0_zhuanli.py  test_ModelSTFT_Analysis.py  test_ModelSine_Analysis.py  test_ModelSine_Synthesis.py  test_ModelSine_sineModel.py  test_unwrap.py
tests/python/source/: test_append.py
tests/python/source/generator/: test_generator.py  test_shift.py  test_sine.py
tests/python/source/window/: test_blackmanharriswindow.py  test_center_triangwindow.py  test_hamming.py  test_hann.py  test_normalized_blackmanharris_window.py  test_signal_windowed.py  test_triangwindow.py  test_windows.py
tests/python/transform/: test_Autocorrelation.py  test_Difference.py  test_Transform.py  test_convolution.py  test_dft.py  test_fft.py  test_fft_linearity.py  test_fft_shift.py  test_midi.py  test_windowed_fft.py
tests/python/ui/: gui_frame.py  test_gui.py  test_tk.py
